NodeJS-Starter-V1/k8s/monitoring/namespace.yaml
---
# Monitoring Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    app: ccw-online-erp
